<resources>
    <string name="app_name">EduForum</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_display_name">Display name should not be empty</string>
    <string name="invalid_username">Not a valid email address</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_confirm_password">Password mismatch</string>
    <string name="login_failed">"Login failed!"</string>
    <string name="register_failed">"Register failed!"</string>
    <string name="sign_in_welcome">Sign in to continue!</string>
    <string name="register_welcome">Register to get started!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here.</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_here">Sign In here</string>
    <string name="prompt_display_name">Display Name</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="welcome_to_eduforum">Welcome to EduForum</string>
    <string name="create_account">Create Account</string>
    <string name="successfully_registered">Successfully registered!\nCheck your email to verify your account.</string>
    <string name="register_duplicate_failed">A user with same email address already exists!</string>
    <string name="login_not_verified">Account is not verified yet. \nPlease check the link sent to your email.</string>
    <string name="login_invalid_credentials">Invalid email address or password!</string>
    <string name="logout">Logout</string>
    <string name="horizontal_ellipsize">⋯</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="copy_link">Copy link</string>
    <string name="no">No</string>
    <string name="question_deleted">The question has been deleted.</string>
    <string name="question_not_deleted">Unable to delete this question at the moment.</string>
    <string name="delete_question_alert_title">Delete question?</string>
    <string name="delete_question_alert_message">Are you sure you want to delete this question?</string>
    <string name="delete_question_alert_yes">Yes, Delete</string>
    <string name="question_updated">The question has been updated.</string>
    <string name="question_not_updated">Unable to update this question at the moment.</string>
    <string name="question_add_success">Successfully added question!</string>
    <string name="question_add_failure">Unable to add question! Try again.</string>
    <string name="answer_deleted">The answer has been deleted.</string>
    <string name="answer_not_deleted">Unable to delete this answer at the moment.</string>
    <string name="delete_answer_alert_title">Delete answer?</string>
    <string name="delete_answer_alert_message">Are you sure you want to delete this answer?</string>
    <string name="delete_answer_alert_yes">Yes, Delete</string>
    <string name="answer_updated">The answer has been updated.</string>
    <string name="answer_not_updated">Unable to update this answer at the moment.</string>
    <string name="answer_add_success">Successfully added answer!</string>
    <string name="answer_add_failure">Unable to add answer! Try again.</string>
    <string name="answers">" answers"</string>
    <string name="answer">" answer"</string>
    <string name="unknown_author">Unknown</string>
    <string name="rotate_anti_clockwise">Rotate Anti-Clockwise</string>
    <string name="rotate_clockwise">Rotate Clockwise</string>
    <string name="flip_vertically">Flip Vertically</string>
    <string name="flip_horizontally">Flip Horizontally</string>
    <string name="crop_image">Crop Image</string>
    <string name="failed_to_load_image">Failed to load the image</string>
    <string name="no_questions_available">No questions available.</string>
    <string name="no_notifications_available">No notifications available.</string>
    <string name="notif_body_answered"> has answered your question</string>
    <string name="remove_notification">Remove this notification</string>
    <string name="notification_removed">Notification removed.</string>
    <string name="notification_not_removed">Unable to remove this notification at the moment.</string>
    <string name="unable_to_retrieve_notifications">Unable to retrieve notifications! Try again.</string>
    <string name="you_havent_posted_anything">You haven\'t posted anything yet.</string>
    <string name="unable_to_retrieve_posts">Unable to retrieve posts! Try again.</string>
    <string name="unable_to_add_answer">Unable to add answer! Try again.</string>
    <string name="cancel_authorization">Cancel Authorization</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="help">HELP</string>
    <string name="refresh">REFRESH</string>
    <plurals name="input_empty">
        <item quantity="one">Input field should not be empty.</item>
        <item quantity="other">Input fields should not be empty.</item>
    </plurals>
</resources>